--- a/index.html
+++ b/index.html
@@ -474,6 +474,31 @@
                   </div>
                 </div>
               </div>
+              <ul class="pagination pagination--mt3">
+                <li class="pagination-item">
+                  <a href="" class="pagination-item__link">
+                    <i class="pagination-item__icon bi bi-chevron-left"></i>
+                  </a>
+                </li>
+                <!-- selected: pagination-item--active -->
+                <li class="pagination-item pagination-item--active">
+                  <a href="" class="pagination-item__link">1</a>
+                </li>
+                <li class="pagination-item">
+                  <a href="" class="pagination-item__link">2</a>
+                </li>
+                <li class="pagination-item">
+                  <a href="" class="pagination-item__link">...</a>
+                </li>
+                <li class="pagination-item">
+                  <a href="" class="pagination-item__link">12</a>
+                </li>
+                <li class="pagination-item">
+                  <a href="" class="pagination-item__link">
+                    <i class="pagination-item__icon bi bi-chevron-right"></i
+                  ></a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
